testsuite/tests/interpreter_errors/call_property_wrong_return_type/test.out
script.lkql:2:7: error: Unsupported value type from the introspection API: COMPLETION_ITEM_ITERATOR_VALUE
2 | print(names[1].p_complete())
  |       ^^^^^^^^^^^^^^^^^^^^^ 

